# sixtracklib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Settings.cmake.default  mktest  roadmap  setup.py
examples/: CMakeLists.txt  CMakeLists.txt.install  Settings.cmake.install  fodo.py
examples/beam_beam/: test_BB4D.py
examples/beam_beam/madx/: bb.madx
examples/c99/: CMakeLists.txt  CMakeLists.txt.install  check_bb6d_output.py  run_opencl_kernel.c  run_opencl_kernel.cl  simple_drift.c  simple_drift_buffer.c  simple_drift_cuda.c  simple_drift_opencl.c  simple_particles_buffer.c  temp_particles.py  track_bbsimple.c  track_beambeam.c  track_io.c  track_io_opencl.c  track_job_cl.c  track_job_cpu.c  track_job_opencl.c  track_lhc_bb.c  track_lhc_bb_opencl.c  track_lhc_no_bb.c  track_lhc_no_bb_cuda.c  track_lhc_no_bb_from_python.c  track_lhc_no_bb_opencl.c  track_simple_bb_from_python.c
examples/cavity/: bench.madx  bench.py
examples/cxx/: CMakeLists.txt  CMakeLists.txt.install  run_opencl_kernel.cpp  simple_drift_buffer.cpp  track_fodo_cuda.cpp  track_fodo_opencl.cpp  track_job_cl.cpp  track_job_cpu.cpp  track_lhc_no_bb.cpp  track_lhc_no_bb_opencl.cpp
examples/drift/: bench.madx  bench.py
examples/fodo/: bench.madx  fodo.madx  plot_fodo.py  speed_longtest.py
examples/lhc_sixtrack/: bench_2xXEON.txt  bench_GTX1080.txt  bench_K20.txt  bench_P100.txt  bench_R9280X.txt  bench_W8100.txt  fort.3  read.py  speed.py  speed_cpu.py  speed_longtest.py
examples/multipole/: bench.madx
examples/python/: .gitignore  CMakeLists.txt  CMakeLists.txt.install  __init__.py  cuda_particle_addr.py  opencl_cpu_particle_addr.py  opencl_kernel_info.py  pycuda_particle_addr.py  track_bbsimple.py  track_beambeam.py  track_job.py  track_job_short.py  track_job_simple.py  track_lhc_no_bb.py  track_simplebb.py
examples/python/spacecharge/: 000_prepare_spacecharge_lattice.py  001_generate_particle_coordinates.py  002_track_and_footprint.py  example_helpers.py  footprint.py  line_density_profile.py  runmadx
examples/python/test_monitor/: test.py
examples/thinbend/: bench.madx
examples/thinquad/: bench.madx
python/: .gitignore  000_generate_bin.py  000_with_bb.py  001_check_bb6d_output.py  002_compare_sixtracklib_pysixtrack.py  CMakeLists.txt  __init__.py  beam_elements.py  export_to_cobjects.py  particles.py  setup.py.template  t001_load_so.py  temp_particles.py  testdata.py.template
python/pysixtracklib/: .gitignore  CMakeLists.txt  __init__.py  beam_elements.py  beam_monitor.py  buffer.py  config.py.template  config_helper.py  control.py  cuda.py  export_to_cobjects.py  mad_helper.py  particles.py  pysixtrack_helper.py  sixtracklibconf.py.template  stcommon.py  trackjob.py  trackjobcl.py
python/pysixtracklib_test/: CMakeLists.txt  __init__.py  generic_obj.py  stcommon.py  testdata.py
python/sixtracklib/: CMakeLists.txt  __init__.py  beam_elements.py  buffer.py  config.py.template  control.py  cuda.py  interpol.py  mad_helper.py  opencl.py  particles.py  pysixtrack_helper.py  sc_line_density.py  stcommon.py  trackjob.py  tricub.py
python/sixtracklib_test/: CMakeLists.txt  config.py.template  generic_obj.py  stcommon.py  testdata.py
sixtracklib/: BB4D.h  BB6D.h  BB6D.py  BB6D_boost.h  BB6D_boost.py  BB6D_data.py  BB6D_propagateSigma.h  BB6D_propagate_sigma_matrix.py  BB6D_slicing.py  BB6D_transverse_fields.h  BB_cmpx.h  BB_faddeeva_cern.h  BB_transverse_field_gauss_ellip.h  BB_transverse_field_gauss_round.h  CMakeLists.txt  __init__.py  beam.h  block.c  block.h  block_handling.c  cbeam.py  cblock.py  cobjects.py  constants.h  cparticles.py  faddeeva_cern.h  linmap.py  makefile  myint.h  new_beam.h  particle.h  sixtracklib.h  sixtracklib.hpp  test_block.c  test_cl.py  track.c  track.h  transverse_field_gauss_ellip.h  transverse_field_gauss_round.h  value.h
sixtracklib/_impl/: .gitignore  CMakeLists.txt  SixTracklibConfig.cmake.template  definitions.h  inline.h  modules.h.template  namespace_begin.h  namespace_end.h  path.h.template  testdata_files.h.template
sixtracklib/common/: CMakeLists.txt  alignment.h  be_drift.h  beam_elements.h  beam_elements.hpp  block.h  block_drift.h  block_info.h  blocks.h  blocks_container.h  buffer.h  buffer.hpp  compute_arch.h  constants.h  context.h  controller.h  definitions.h  mem_pool.h  particles.h  particles.hpp  particles_sequence.h  restrict.h  single_particle.h  track.h  track.hpp  track_job.h  track_job_cpu.h  values.h
sixtracklib/cuda/: CMakeLists.txt  argument.h  argument.hpp  buffer.h  context.h  context.hpp  controller.h  controller.hpp  cuda_env.h  cuda_tools.h  definitions.h  node_info.hpp  track_job.h  track_job.hpp  track_particles_kernel.cu  track_particles_kernel.cuh  track_particles_kernel_c_wrapper.h
sixtracklib/examples/: CMakeLists.txt  simple_drift.c  simple_drift_opencl.c  simple_drift_simd.c
sixtracklib/mpfr4/: CMakeLists.txt  beam_elements.h  track.h
sixtracklib/opencl/: .gitignore  CMakeLists.txt  argument.h  buffer.h  cl.h.template  context.h  helpers.h  make_track_job.h  ocl_environment.h  opencl.h.template  opencl.hpp.template  particles.cl  track.h  track_job_cl.h  track_particles_kernel.cl
sixtracklib/simd/: CMakeLists.txt  track.h
sixtracklib/testdata/: .gitignore  CMakeLists.txt  generate_testdata_tracking.cpp  tracking_testfiles.h  tracking_testfiles.h.template
tests/: CMakeLists.txt  test_block.py  test_block_data.py  test_cobject.py  test_rotation.py  test_track.py
tests/benchmark/: CMakeLists.txt  benchmark_template.config  run_benchmark_cxx.cpp
tests/python/: .gitignore  CMakeLists.txt  test_argument_cuda.py  test_cbuffer_st_buffer.py  test_context_cuda.py  test_output_buffer.py  test_qgauss.py  test_track_job_cpu.py  test_track_job_cpu_assign_address_items.py  test_track_job_cpu_ext_stored_buffer.py  test_track_job_cpu_stored_buffer.py  test_track_job_opencl.py  test_track_job_setup.py  test_track_line_cuda.py
tests/sixtracklib/: CMakeLists.txt  testlib.h  testlib.hpp
tests/testdata/: .gitignore  CMakeLists.txt
tools/: CMakeLists.txt  dump_cbuffer.c  normalize_cobject_dump.c
(+1005 files in other folders)
